Added slash commands to add/delete/view roles. Added slash commands to view and change welcome message